# better-llm

./: .context.json  .env.example  .gitignore  ADVANCED_FEATURES.md  CHANGELOG.md  CLAUDE.md  CLAUDE_HISTORY.md  CODING_STYLE_ANALYSIS.md  CODING_STYLE_SUMMARY.txt  CONTRIBUTING.md  IMPORT_FIX_SUMMARY.md  INSTALL.md  MANIFEST.in  PHASE1_REFACTORING_SUMMARY.md  README.md  USAGE.md  app.py  claude-agent-sdk-features.md  cleanup.sh  coverage.xml  idea-1-group-chat-orchestration.md  install.sh  mkdocs.yml  orchestrator.py  prd-group-chat-orchestration-extended.md  prd-group-chat-orchestration-mvp.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  reset_terminal.sh  run-workflow-canvas.sh  setup.py  setup.sh  test_context_compression.py  test_improvements.py  test_integration.py  test_logging.py  test_manager_recovery.py  test_memory_bank.py  (+3 more)
config/: agent_config.json  system_config.json
docs/: CLI_OUTPUT_IMPROVEMENTS.md  ERROR_HANDLING_GUIDELINES.md  IMPLEMENTATION_SUMMARY.md  IMPORT_GUIDELINES.md  SDK_RESPONSE_PARSING.md  architecture.md  debug_mode.md  errors.md  feature-plan.md  index.md  quickstart-web.md  resilience.md  troubleshooting.md  use_cases_guide.md  web-quickstart.md  web-server-guide.md  web-usage.md  workflow-canvas-guide.md
examples/: cli_ui_demo.py
prompts/: api_planner.txt  architecture_reviewer.txt  backend_coder.txt  bug_fix_planner.txt  bug_fixer.txt  coder.txt  committer.txt  database_coder.txt  database_planner.txt  documenter.txt  e2e_tester.txt  feature_planner.txt  frontend_coder.txt  ideator.txt  infrastructure_coder.txt  (+15 more)
(+387 files in other folders)
